[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/enemies/blood_creep.png" type="Texture" id=1]
[ext_resource path="res://src/effect/ground_effect_creep_area.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=23]
radius = 25.0
height = 100.0

[sub_resource type="Gradient" id=22]
colors = PoolColorArray( 1, 0, 0, 0.215686, 1, 0.0980392, 0.0980392, 0 )

[node name="CreepZone" type="Area2D"]
z_as_relative = false
collision_layer = 32
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
z_index = -50
shape = SubResource( 23 )

[node name="CreepParticles" type="CPUParticles2D" parent="."]
show_behind_parent = true
z_index = 15
z_as_relative = false
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
local_coords = false
texture = ExtResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 35, 15 )
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 22 )

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="." to="." method="_on_CreepZone_body_entered"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
